Chart created, Library started (commit 2)

--- a/LibraryProject/LibraryProject.csproj
+++ b/LibraryProject/LibraryProject.csproj
@@ -138,5 +138,8 @@
   <ItemGroup>
     <None Include="Resources\GoBack.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GoRight.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
